5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3119/executions/1834_1276.log
== TEST (2019-06-27 16:28:33) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite os valores: ")))

vet = zeros(mat.shape[0], dtype = int)

for i in range(mat.shape[0]):
	 vet[i] = max(mat[i,:])
		
print(vet)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:28:51) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite os valores: ")))

vet = zeros(mat.shape[0], dtype = int)

for i in range(mat.shape[0]):
	 vet[i] = max(mat[i,:])
		
print(vet)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:28:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite os valores: ")))

vet = zeros(mat.shape[0], dtype = int)

for i in range(mat.shape[0]):
	 vet[i] = max(mat[i,:])
		
print(vet)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:29:37) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite os valores: ")))

vet = zeros(mat.shape[0], dtype = int)

for i in range(mat.shape[0]):
	 vet[i] = max(mat[i,j])
		
print(vet)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:29:44) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite os valores: ")))

vet = zeros(mat.shape[0], dtype = int)

for i in range(mat.shape[0]):
	 vet[i] = max(mat[i])
		
print(vet)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:31:10) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite os valores: ")))

vet = zeros(7, dtype = int)

for i in range(vet):
	 vet[i] = max(mat[i,:])
		
print(vet)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:31:17) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite os valores: ")))

vet = zeros(7, dtype = int)

for i in range(7):
	 vet[i] = max(mat[i,:])
		
print(vet)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:31:28) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite os valores: ")))

vet = zeros(7, dtype = int)

for i in range(7):
	 vet[i] = max(mat[:,i])
		
print(vet)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:31:46) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite os valores: ")))

vet = zeros(7, dtype = int)

for i in range(7):
	 vet[i] = sum(mat[:,i])
		
print(vet)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:32:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite os valores: ")))

vet = zeros(7, dtype = int)

for i in range(vet):
	 vet[i] = sum(mat[:,i])
		
for i in range		
		
print(vet)		
-- ERROR:
File "XXXX", line 11
    for i in range		
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:32:16) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite os valores: ")))

vet = zeros(7, dtype = int)

for i in range(vet):
	 vet[i] = sum(mat[:,i])
		

		
print(vet)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:33:37) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite os valores: ")))

vet = zeros(7, dtype = int)

for i in range(7):
	 vet[i] = sum(mat[:,i])

for i in range(vet):
	if(vet[i] == max(vet)):
		print(i)
		

		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:33:54) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite os valores: ")))

vet = zeros(7, dtype = int)

for i in range(7):
	 vet[i] = sum(mat[:,i])

for i in range(vet):
	if(vet[i] == max(vet)):
		print(i)
		

		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:34:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite os valores: ")))

vet = zeros(7, dtype = int)

for i in range(7):
	 vet[i] = sum(mat[:,i])

for i in range(7):
	if(vet[i] == max(vet)):
		print(i)
		

		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:34:09) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite os valores: ")))

vet = zeros(7, dtype = int)

for i in range(7):
	 vet[i] = sum(mat[:,i])

for i in range(7):
	if(vet[i] == max(vet)):
		print(i + 1)
		

		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 16:34:16) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite os valores: ")))

vet = zeros(7, dtype = int)

for i in range(7):
	 vet[i] = sum(mat[:,i])

for i in range(7):
	if(vet[i] == max(vet)):
		print(i + 1)
		

		

-- EXECUTION TIME:
1.10553
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
